--- a/android/SecondApp/app/src/main/res/layout/activity_main.xml
+++ b/android/SecondApp/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,13 @@
         app:layout_constraintStart_toStartOf="@+id/nameTextView"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
+    <ImageView
+        android:id="@+id/avatarImageView"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
