--- a/android/SecondApp/app/src/main/res/layout/activity_search.xml
+++ b/android/SecondApp/app/src/main/res/layout/activity_search.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/button3"
+        app:layout_constraintRight_toLeftOf="@id/searchButton"
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
@@ -28,7 +28,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
@@ -36,6 +36,18 @@
         app:layout_constraintBottom_toBottomOf="@+id/queryEditTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/queryEditTextLayout" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/queryEditTextLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
