--- a/android/SecondApp/app/src/main/res/layout/item_repo.xml
+++ b/android/SecondApp/app/src/main/res/layout/item_repo.xml
@@ -8,14 +8,12 @@
     android:layout_marginStart="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginEnd="4dp"
-    android:background="@android:color/white"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView2"
