--- a/android/SecondApp/app/src/main/res/layout/item_repo.xml
+++ b/android/SecondApp/app/src/main/res/layout/item_repo.xml
@@ -8,6 +8,7 @@
     android:layout_marginStart="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginEnd="4dp"
+    android:layout_marginBottom="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
