--- a/android/SecondApp/app/src/main/res/layout/item_repo.xml
+++ b/android/SecondApp/app/src/main/res/layout/item_repo.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/avatarImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
@@ -27,21 +27,21 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/repoTextView"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintBottom_toBottomOf="@+id/avatarImageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
+            app:layout_constraintTop_toTopOf="@+id/avatarImageView"
             app:layout_constraintVertical_bias="0.05"
             tools:text="JetBrains/kotlin" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/descTextView"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -49,10 +49,24 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="@+id/repoTextView"
+            app:layout_constraintStart_toStartOf="@+id/repoTextView"
+            app:layout_constraintTop_toBottomOf="@+id/repoTextView"
             tools:text="Learn how to make online games, and apps for Android O, like Pokémon , twitter,Tic Tac Toe, and notepad using Kotlin" />
+
+        <TextView
+            android:id="@+id/nameTextView"
+            style="@style/TextAppearance.MaterialComponents.Body2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
+            app:layout_constraintStart_toStartOf="@+id/avatarImageView"
+            app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
+            tools:text="hussien89aa" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
