--- a/android/SecondApp/app/src/main/res/layout/activity_search.xml
+++ b/android/SecondApp/app/src/main/res/layout/activity_search.xml
@@ -48,6 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/queryEditTextLayout"
+        tools:itemCount="3"
         tools:listitem="@layout/item_repo" />
 
 
