--- a/android/SecondApp/app/src/main/res/layout/item_repo.xml
+++ b/android/SecondApp/app/src/main/res/layout/item_repo.xml
@@ -53,7 +53,7 @@
             app:layout_constraintStart_toStartOf="@+id/repoTextView"
             app:layout_constraintTop_toBottomOf="@+id/repoTextView"
             app:layout_constraintVertical_bias="0.1"
-            tools:text="Learn how to make online games, and apps for Android O, like Pokémon , twitter,Tic Tac Toe, and notepad using Kotlin" />
+            tools:text="Learn how to make online games, and apps for Android O, like Pokémon , twitter,Tic Tac Toe, and notepad using Kotlin Learn how to make online games, and apps for Android O, like Pokémon , twitter,Tic Tac Toe, and notepad using Kotlin" />
 
         <TextView
             android:id="@+id/nameTextView"
@@ -67,6 +67,7 @@
             app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
             app:layout_constraintStart_toStartOf="@+id/avatarImageView"
             app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
+            app:layout_constraintVertical_bias="0.0"
             tools:text="hussien89aa" />
 
 
